fix(styles): fix vertical alignment of icon in alert (#3727)

--- a/src/styles/alert.scss
+++ b/src/styles/alert.scss
@@ -21,6 +21,7 @@ $block: #{$fd-namespace}-alert;
     width: 2.5rem;
     top: 0.4375rem;
     left: 0;
+    line-height: 1rem;
   }
 
   @mixin fd-alert-close-btn-container {
